--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 body{
     padding: 0;
     margin: 0 !important;
-    background-image: url(/images/pattern-background-desktop.svg);
+    background-image: url(./images/pattern-background-desktop.svg);
     background-size: contain;
     background-repeat: no-repeat;
     background-color: hsl(225, 100%, 94%);
@@ -19,7 +19,7 @@ body{
     background-color: hsl(225, 100%, 98%);
 }
 .hero-image{
-    background-image: url('/images/illustration-hero.svg');
+    background-image: url('./images/illustration-hero.svg');
     background-repeat: no-repeat;
     background-size:contain;
     height: 40vh;
@@ -109,7 +109,7 @@ body{
     body{
         padding: 0;
         margin: 0 !important;
-        background-image: url(/images/pattern-background-desktop.svg);
+        background-image: url(./images/pattern-background-desktop.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-color: hsl(225, 100%, 94%);
@@ -123,7 +123,7 @@ body{
     background-color: hsl(225, 100%, 98%);
 }
 .hero-image{
-    background-image: url('/images/illustration-hero.svg');
+    background-image: url('./images/illustration-hero.svg');
     background-repeat: no-repeat;
     background-size:contain;
     height: 30vh;
